# jules-portfolio

./: .gitignore  README.md
ml/: .dockerignore  BACKLOG.md  Dockerfile  README.md  pyproject.toml
ml/app/: main.py  streamlit_app.py
ml/artifacts/serving/: manifest.json
ml/artifacts/serving/models/: h2h_beats_teammate.joblib  quali_top10.joblib  race_podium.joblib  race_points.joblib  race_winner.joblib  sprint_grid_top5.joblib  sprint_points.joblib
ml/data/metrics/: baseline.json  features.json  gbm.json  phase10_h2h_beats_teammate.json  phase10_quali_top10.json  phase10_race_podium.json  phase10_race_points.json  phase10_race_winner.json  phase10_sprint_grid_top5.json  phase10_sprint_points.json  target_h2h_beats_teammate.json  target_quali_top10.json  target_race_podium.json  target_race_points.json  target_race_winner.json  target_sprint_grid_top5.json  target_sprint_points.json
ml/data/tuned/: h2h_beats_teammate.json  quali_top10.json  race_podium.json  race_points.json  race_winner.json  sprint_grid_top5.json  sprint_points.json
ml/src/f1_prediction/: __init__.py  api.py  artifacts.py  calibration.py  continuous_learning.py  ensemble.py  evaluate.py  explain.py  export_web.py  features.py  ingest.py  publish.py  targets.py  train.py  train_all.py  train_baseline.py  train_features.py  train_gbm.py  tune.py
ml/src/f1_prediction/models/: baseline.py  gbm.py  (+1 more)
ml/tests/: conftest.py  test_api.py  test_artifacts.py  test_calibration.py  test_evaluate.py  test_explain.py  test_features.py  test_ingest.py  test_practice.py  test_smoke.py  test_targets.py
(+1200 files in other folders)
