[project]
name = "f1-prediction"
version = "0.1.0"
description = "Predicts per-driver probability of finishing in the points for F1 races."
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "lightgbm>=4.3.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "typer>=0.12.0",
    "scipy>=1.13.0",
]

[project.optional-dependencies]
train = [
    "fastf1>=3.4.0",
    "pyarrow>=16.0.0",
    "shap>=0.45.0",
    "numba>=0.59.0",
    "llvmlite>=0.42.0",
    "matplotlib>=3.8.0",
    "streamlit>=1.35.0",
    "optuna>=3.6.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/f1_prediction"]

[dependency-groups]
dev = [
    "playwright>=1.58.0",
]
